--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,9 @@ accounts:
   - name: masterminter
     coins: ['10000token', '100000000stake']
     mnemonic: peanut humble castle coin diet spy idea raven candy ice electric walnut fuel lizard depart owner kid piano cram slow session fancy page deposit
+  - name: mintercontroller
+    coins: ['10000token', '100000000stake']
+    mnemonic: dress offer practice nut usual thing prevent indoor hobby capable sketch speak chest destroy layer fatal silk blur salad kitchen zebra wild illness zebra
   - name: blacklister
     coins: ['10000token', '100000000stake']
     mnemonic: cradle change member under cycle soul liquid figure develop digital risk dream render want nice purse spawn simple entry steel average dutch recall census
@@ -27,3 +30,31 @@ accounts:
 validator:
   name: alice
   staked: '100000000stake'
+genesis:
+  app_state:
+    bank:
+      denom_metadata:
+        - display: 'usdc'
+          base: 'uusdc'
+          name: 'USDC'
+          symbol: 'USDC'
+          denom_units:
+            - denom: 'uusdc'
+              aliases:
+                - 'microusdc'
+              exponent: '0'
+            - denom: 'musdc'
+              aliases:
+                - 'milliusdc'
+              exponent: '3'
+            - denom: 'usdc'
+              exponent: '6'
+    tokenfactory:
+      owner:
+        address: cosmos1rde4hcxtztnzdzkta5xergke5yzsf877xzfxdh
+      admin:
+        address: cosmos1qqj305p7vhzfcxku8wp7eh64he452nerwlw93k
+      paused:
+        paused: false
+      mintingDenom:
+        denom: 'uusdc'
