--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -14,6 +14,8 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+    outputs:
+      branchTag: ${{ steps.meta.outputs.version }}
     permissions:
       contents: read
       packages: write
@@ -42,6 +44,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -51,3 +54,24 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  run-ibctest:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.18
+        id: go
+              
+      - name: checkout chain
+        uses: actions/checkout@v2
+        
+      - run: make ibctest
+        env:
+          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
+
+
+
+      
