--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -55,7 +55,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  run-ibctest:
+  test-tkn-factory:
     runs-on: ubuntu-latest
     needs: build-and-push-image
     steps:
@@ -68,7 +68,24 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest
+      - run: make ibctest-tkn-factory
+        env:
+          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
+
+  test-packet-forward:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.18
+        id: go
+              
+      - name: checkout chain
+        uses: actions/checkout@v2
+        
+      - run: make ibctest-packet-forward
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
