--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -59,10 +59,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push-image
     steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v1
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: 1.19
         id: go
               
       - name: checkout chain
@@ -76,10 +76,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push-image
     steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v1
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: 1.19
         id: go
               
       - name: checkout chain
@@ -89,6 +89,19 @@ jobs:
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
-
-
-      
+  test-param-authority:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+        id: go
+              
+      - name: checkout chain
+        uses: actions/checkout@v2
+        
+      - run: make ibctest-paramauthority
+        env:
+          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
