--- a/chains.yaml
+++ b/chains.yaml
@@ -1,12 +1,7 @@
 # This file is used to create docker images using the heighliner binary.
 
 - name: noble
-  github-organization:
-  github-repo:
   language: go
-  build-target: install
-  build-env:
-    - LEDGER_ENABLED=false
-    - BUILD_TAGS=muslc
+  build-target: make install
   binaries:
     - /go/bin/nobled
