--- a/chains.yaml
+++ b/chains.yaml
@@ -1,7 +1,7 @@
 # This file is used to create docker images using the heighliner binary.
 
 - name: noble
-  language: go
+  dockerfile: cosmos
   build-target: make install
   binaries:
     - /go/bin/nobled
