--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-tkn-factory
+      - run: make interchaintest-tkn-factory
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
@@ -85,7 +85,7 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-packet-forward
+      - run: make interchaintest-packet-forward
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
@@ -102,6 +102,6 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-paramauthority
+      - run: make interchaintest-paramauthority
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
