--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -105,3 +105,20 @@ jobs:
       - run: make ibctest-paramauthority
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
+
+  test-ICS:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+        id: go
+              
+      - name: checkout chain
+        uses: actions/checkout@v2
+        
+      - run: make ibctest-ics
+        env:
+          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
