--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -119,6 +119,6 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-ics
+      - run: make ictest-ics
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
