--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-tkn-factory
+      - run: make ictest-tkn-factory
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
@@ -85,7 +85,7 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-packet-forward
+      - run: make ictest-packet-forward
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
@@ -102,7 +102,7 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-paramauthority
+      - run: make ictest-paramauthority
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
@@ -119,6 +119,6 @@ jobs:
       - name: checkout chain
         uses: actions/checkout@v2
         
-      - run: make ibctest-ics
+      - run: make ictest-ics
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
