--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -123,6 +123,23 @@ jobs:
         env:
           BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
 
+  test-globalfee-module:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+        id: go
+              
+      - name: checkout chain
+        uses: actions/checkout@v2
+        
+      - run: make ictest-globalFee
+        env:
+          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
+
   test-ics20-bps-fees:
     runs-on: ubuntu-latest
     needs: build-and-push-image
