--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -10,7 +10,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -30,6 +29,14 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Set Environment Variable
+        run: |
+          if [ "${{ github.event.pull_request.head.repo.fork }}" == "true" ]; then
+            echo "::set-env name=IMAGE_NAME:: ${{ github.triggering_actor }}/${{ github.event.repository.name }}"
+          else
+            echo "::set-env name=IMAGE_NAME::${{ github.repository }}"
+          fi
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
