--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -5,20 +5,16 @@ on:
   push:
     tags:
     - '**'
-    branches:
-    - '**'
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     outputs:
       branchTag: ${{ steps.meta.outputs.version }}
-    permissions:
-      contents: read
-      packages: write
 
     steps:
       - name: Checkout repository
@@ -30,20 +26,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set Environment Variable
-        run: |
-          if [ "${{ github.event.pull_request.head.repo.fork }}" == "true" ]; then
-            echo "IMAGE_NAME=${{ github.triggering_actor }}/${{ github.event.repository.name }}" >> $GITHUB_ENV
-          else
-            echo "IMAGE_NAME=${{ github.repository }}" >> $GITHUB_ENV
-          fi
-
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.CI_ACTOR }}
+          password: ${{ secrets.CI_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
