--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       branchTag: ${{ steps.meta.outputs.version }}
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout repository
