--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.CI_ACTOR }}
+          username: ${{ github.ACTOR }}
           password: ${{ secrets.CI_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
