--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -33,8 +33,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.ACTOR }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.CI_ACTOR }}
+          password: ${{ secrets.CI_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
