--- a/.github/workflows/docker-publish-and-E2E.yaml
+++ b/.github/workflows/docker-publish-and-E2E.yaml
@@ -1,4 +1,4 @@
-name: Create Docker Image + E2E Tests
+name: Create Docker Image
 
 on:
   push:
@@ -14,8 +14,6 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-    outputs:
-      branchTag: ${{ steps.meta.outputs.version }}
     permissions:
       contents: read
       packages: write
@@ -44,7 +42,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        id: push
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -54,122 +51,3 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  test-tkn-factory:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-tkn-factory
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-packet-forward:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-packet-forward
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-param-authority:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-paramauthority
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-chain-upgrade-noble-1:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-chain-upgrade-noble-1
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-chain-upgrade-grand-1:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-chain-upgrade-grand-1
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-globalfee-module:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-globalFee
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
-
-  test-ics20-bps-fees:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-        id: go
-              
-      - name: checkout chain
-        uses: actions/checkout@v2
-        
-      - run: make ictest-ics20-bps-fees
-        env:
-          BRANCH_CI: ${{needs.build-and-push-image.outputs.branchTag}}
