--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -22,20 +22,12 @@ jobs:
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
 
-        - name: Log in to the Container registry
-          uses: docker/login-action@v2
-          with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
-
         - name: Build and push Docker image
           uses: docker/build-push-action@v3
           with:
             context: .
             platforms: linux/amd64
-            tags: local
-            labels: e2e_CI
+            tags: noble:local
             cache-from: type=gha
             cache-to: type=gha,mode=max
             
