set load to true

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -28,6 +28,7 @@ jobs:
             context: .
             platforms: linux/amd64
             tags: noble:local
+            load: true
             cache-from: type=gha
             cache-to: type=gha,mode=max
 
