--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -58,14 +58,14 @@ jobs:
                     
             - name: checkout chain
               uses: actions/checkout@v3
-              
+
             - name: Download Artifact
               uses: actions/download-artifact@v3
               with:
                 name: noble-docker-image
 
             - name: Load Docker Image
-              run: docker load ${{ env.TAR_PATH }}
+              run: docker image load -i ${{ env.TAR_PATH }}
 
             - name: run test
               run: make ${{ matrix.test }}
