--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -32,7 +32,7 @@ jobs:
                 platforms: linux/amd64
                 tags: noble:local
                 # load: true
-                outputs: type=tar,path=${{ env.TAR_PATH }}
+                outputs: type=tar,dest=${{ env.TAR_PATH }}
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
             
