--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -1,74 +1,72 @@
 name: End to End Tests
 
 on:
-    pull_request:
+  pull_request:
 
 env:
-    TAR_PATH: ./binary_docker
+  TAR_PATH: ./binary_docker
 
 concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-    build-docker:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Set up Go 1.19
-              uses: actions/setup-go@v3
-              with:
-                go-version: 1.19
-                    
-            - name: checkout chain
-              uses: actions/checkout@v3
-    
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-    
-            - name: Build Docker image
-              uses: docker/build-push-action@v3
-              with:
-                context: .
-                platforms: linux/amd64
-                tags: noble:local
-                # load: true
-                outputs: type=docker,dest=${{ env.TAR_PATH }}
-                cache-from: type=gha
-                cache-to: type=gha,mode=max
-            
-            # - name: Save Docker Tarball
-            #   run: docker image save noble:local -o ${{ env.TAR_PATH }}
+  build-docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+              
+      - name: checkout chain
+        uses: actions/checkout@v3
 
-            - name: Publish Tarball as Artifact
-              uses: actions/upload-artifact@v3
-              with:
-                name: noble-docker-image
-                path: ${{ env.TAR_PATH }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    e2e-tests:
-        needs: build-docker
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                test: ["ictest-tkn-factory", "ictest-packet-forward", "ictest-paramauthority", "ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1", "ictest-globalFee", "ictest-ics20-bps-fees"]
-            fail-fast: false
+      - name: Build Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64
+          tags: noble:local
+          # Export tarball image to upload and share with other runners
+          outputs: type=docker,dest=${{ env.TAR_PATH }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-        steps:
-            - name: Set up Go 1.19
-              uses: actions/setup-go@v3
-              with:
-                go-version: 1.19
-                    
-            - name: checkout chain
-              uses: actions/checkout@v3
+      - name: Publish Tarball as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: noble-docker-image
+          path: ${{ env.TAR_PATH }}
 
-            - name: Download Tarball Artifact
-              uses: actions/download-artifact@v3
-              with:
-                name: noble-docker-image
+  e2e-tests:
+    needs: build-docker
+    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+            # names of `make` commands to run tests
+            test: ["ictest-tkn-factory", "ictest-packet-forward", "ictest-paramauthority", "ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1", "ictest-globalFee", "ictest-ics20-bps-fees"]
+        fail-fast: false
 
-            - name: Load Docker Image
-              run: docker image load -i ${{ env.TAR_PATH }}
+    steps:
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+              
+      - name: checkout chain
+        uses: actions/checkout@v3
 
-            - name: run test
-              run: make ${{ matrix.test }}
+      - name: Download Tarball Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: noble-docker-image
+
+      - name: Load Docker Image
+        run: docker image load -i ${{ env.TAR_PATH }}
+
+      - name: run test
+        run: make ${{ matrix.test }}
