--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -14,27 +14,16 @@ jobs:
   build-docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-              
-      - name: checkout chain
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Build Docker image
-        uses: docker/build-push-action@v3
+        uses: strangelove-ventures/heighliner-build-action@v0.0.3
         with:
-          context: .
-          platforms: linux/amd64
-          tags: noble:local
-          # Export tarball image to upload and share with other runners
-          outputs: type=docker,dest=${{ env.TAR_PATH }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tar-export-path: ${{ env.TAR_PATH }}
+          platform: linux/amd64 # test runner architecture only
+          chain: noble
+          dockerfile: cosmos
+          build-target: make install
+          binaries: |
+            - /go/bin/nobled
 
       - name: Publish Tarball as Artifact
         uses: actions/upload-artifact@v3
