--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -2,6 +2,11 @@ name: End to End Tests
 
 on:
   pull_request:
+  push:
+    tags:
+    - '**'
+    branches:
+    - '**'
 
 env:
   TAR_PATH: heighliner.tar
