--- a/.github/workflows/draft-release.yaml
+++ b/.github/workflows/draft-release.yaml
@@ -42,8 +42,8 @@ jobs:
     steps:
     - name: Copy Binary
       run: |
-        docker create -it --entrypoint sh --name amd --platform linux/amd64 ghcr.io/${{ github.repository }}:${{ github.ref_name }}
-        docker create -it --entrypoint sh --name arm --platform linux/arm64 ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+        docker create -it --entrypoint sh --name amd --platform linux/amd64 ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
+        docker create -it --entrypoint sh --name arm --platform linux/arm64 ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
         docker cp amd:/bin/nobled ./nobled_linux-amd64
         docker cp arm:/bin/nobled ./nobled_linux-arm64
         sha256sum ./nobled_linux-amd64 > ./nobled_sha256.txt
