--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -1,47 +1,40 @@
 name: End to End Tests
 
 on:
-  push:
-    tags:
-    - '**'
-    branches:
-    - '**'
+  pull_request:
 
 env:
-  REGISTRY: ghcr.io
-  TAR_PATH: heighliner.tar
+  TAR_PATH: ./binary_docker
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-
   build-docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          go-version: 1.19
+
+      - name: checkout chain
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        uses: strangelove-ventures/heighliner-build-action@v0.0.3
+        uses: docker/build-push-action@v3
         with:
-          registry: # empty registry, image only shared for e2e testing
-          tag: local # emulate local environment for consistency in interchaintest cases
-          tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
-          platform: linux/amd64 # test runner architecture only
-          git-ref: ${{ github.base_ref }} # source code ref
-
-          # Heighliner chains.yaml config
-          chain: noble
-          dockerfile: cosmos
-          build-target: make install
-          binaries: |
-            - /go/bin/nobled
+          context: .
+          platforms: linux/amd64
+          tags: noble:local
+          # Export tarball image to upload and share with other runners
+          outputs: type=docker,dest=${{ env.TAR_PATH }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish Tarball as Artifact
         uses: actions/upload-artifact@v3
@@ -63,7 +56,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
-              
+
       - name: checkout chain
         uses: actions/checkout@v3
 
