--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -1,7 +1,9 @@
 name: End to End Tests
 
 on:
-  pull_request:
+  push:
+    branches:
+    - '**'
 
 env:
   TAR_PATH: heighliner.tar
@@ -14,6 +16,13 @@ jobs:
   build-docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build Docker image
         uses: strangelove-ventures/heighliner-build-action@v0.0.3
         with:
@@ -42,7 +51,7 @@ jobs:
     strategy:
         matrix:
             # names of `make` commands to run tests
-            test: ["ictest-tkn-factory", "ictest-packet-forward", "ictest-paramauthority", "ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1", "ictest-globalFee", "ictest-ics20-bps-fees"]
+            test: ["ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1"]
         fail-fast: false
 
     steps:
