--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -42,7 +42,16 @@ jobs:
     strategy:
         matrix:
             # names of `make` commands to run tests
-            test: ["ictest-tkn-factory", "ictest-packet-forward", "ictest-paramauthority", "ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1", "ictest-globalFee", "ictest-ics20-bps-fees", "ictest-client-substitution"]
+            test: 
+              - ictest-tkn-factory
+              - ictest-packet-forward
+              - ictest-paramauthority
+              - ictest-chain-upgrade-noble-1
+              - ictest-chain-upgrade-grand-1
+              - ictest-globalFee
+              - ictest-ics20-bps-fees
+              - ictest-client-substitution
+              - ictest-cctp
         fail-fast: false
 
     steps:
