--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -14,6 +14,14 @@ pull_request_rules:
       backport:
         branches:
           - release/v3.0.x
+  - name: backport patches to v3.1.x branch
+    conditions:
+      - base=main
+      - label=backport/v3.1.x
+    actions:
+      backport:
+        branches:
+          - release/v3.1.x
   - name: backport patches to v4.0.x branch
     conditions:
       - base=main
