--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -27,8 +27,8 @@ jobs:
           chain: noble
           dockerfile: cosmos
           build-target: make install
-          build-env:
-            GOPRIVATE=github.com/circlefin/noble-cctp
+          build-env: |
+            - GOPRIVATE=github.com/circlefin/noble-cctp
           pre-build: |
             mkdir -p ~/.ssh
             echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
