--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -55,10 +55,10 @@ jobs:
         fail-fast: false
 
     steps:
-      - name: Set up Go 1.19
+      - name: Set up Go 1.21
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version: '^1.21'
               
       - name: checkout chain
         uses: actions/checkout@v3
