--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -5,15 +5,15 @@ on:
 
 jobs:
   unit-tests:
-
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: ^1.21
+          go-version: 1.21
 
       - name: Run Unit Tests
         run: go test -v ./...
